projectParser.java
// Generated from project.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class projectParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, ID=49, Digit=50, Termspec=51;
	public static final int
		RULE_root = 0, RULE_declaration = 1, RULE_declarationlist = 2, RULE_declarationtype = 3, 
		RULE_function = 4, RULE_datatype = 5, RULE_block = 6, RULE_statement = 7, 
		RULE_defexpression = 8, RULE_defcondition = 9, RULE_defloop = 10, RULE_defdowhile = 11, 
		RULE_defwhile = 12, RULE_whileloopexpr = 13, RULE_deffor = 14, RULE_forloopexpr = 15, 
		RULE_condition = 16, RULE_increament = 17, RULE_relation = 18, RULE_expression = 19, 
		RULE_defreturn = 20, RULE_defbreak = 21, RULE_logicop = 22, RULE_binop = 23, 
		RULE_spop = 24, RULE_defoutput = 25, RULE_definput = 26, RULE_var = 27, 
		RULE_inc_or_dec = 28, RULE_term = 29, RULE_join = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"root", "declaration", "declarationlist", "declarationtype", "function", 
			"datatype", "block", "statement", "defexpression", "defcondition", "defloop", 
			"defdowhile", "defwhile", "whileloopexpr", "deffor", "forloopexpr", "condition", 
			"increament", "relation", "expression", "defreturn", "defbreak", "logicop", 
			"binop", "spop", "defoutput", "definput", "var", "inc_or_dec", "term", 
			"join"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'@'", "'import'", "'define'", "'\"'", "'as'", "'.'", "'<'", "'>'", 
			"':'", "'int'", "'float'", "'bool'", "'char'", "'string'", "'['", "']'", 
			"'if'", "'~'", "'else'", "'do'", "'while'", "'for'", "'is_equal'", "'isnot_equal'", 
			"'greater_than'", "'less_than'", "'greater_or_equal'", "'less_or_equal'", 
			"'assign'", "'('", "')'", "','", "'return'", "'break'", "'and'", "'or'", 
			"'add'", "'sub'", "'multi'", "'div'", "'mod'", "'power'", "'root'", "'print>>'", 
			"'scan<<'", "'inc'", "'dec'", "'_'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "ID", "Digit", "Termspec"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "project.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public projectParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RootContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			declaration();
			setState(63);
			function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public List<DeclarationlistContext> declarationlist() {
			return getRuleContexts(DeclarationlistContext.class);
		}
		public DeclarationlistContext declarationlist(int i) {
			return getRuleContext(DeclarationlistContext.class,i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(65);
				match(T__0);
				setState(66);
				declarationlist();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationlistContext extends ParserRuleContext {
		public DeclarationtypeContext declarationtype() {
			return getRuleContext(DeclarationtypeContext.class,0);
		}
		public DatatypeContext datatype() {
			return getRuleContext(DatatypeContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode Digit() { return getToken(projectParser.Digit, 0); }
		public DeclarationlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterDeclarationlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitDeclarationlist(this);
		}
	}

	public final DeclarationlistContext declarationlist() throws RecognitionException {
		DeclarationlistContext _localctx = new DeclarationlistContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarationlist);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(T__1);
				setState(72);
				declarationtype();
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				match(T__2);
				setState(74);
				match(T__3);
				setState(75);
				datatype();
				setState(76);
				term();
				setState(77);
				match(T__4);
				setState(78);
				match(Digit);
				setState(79);
				match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationtypeContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public DeclarationtypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationtype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterDeclarationtype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitDeclarationtype(this);
		}
	}

	public final DeclarationtypeContext declarationtype() throws RecognitionException {
		DeclarationtypeContext _localctx = new DeclarationtypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarationtype);
		try {
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				match(T__3);
				setState(84);
				term();
				setState(85);
				match(T__3);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				match(T__3);
				setState(88);
				term();
				setState(89);
				match(T__5);
				setState(90);
				term();
				setState(91);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public DatatypeContext datatype() {
			return getRuleContext(DatatypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(projectParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function);
		try {
			setState(121);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				datatype();
				setState(96);
				match(ID);
				setState(97);
				match(T__6);
				setState(98);
				match(T__7);
				setState(99);
				block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				datatype();
				setState(102);
				match(ID);
				setState(103);
				match(T__6);
				setState(104);
				statement();
				setState(105);
				match(T__7);
				setState(106);
				block();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				datatype();
				setState(109);
				match(ID);
				setState(110);
				match(T__6);
				setState(111);
				statement();
				setState(112);
				match(T__7);
				setState(113);
				match(T__8);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(115);
				datatype();
				setState(116);
				match(ID);
				setState(117);
				match(T__6);
				setState(118);
				match(T__7);
				setState(119);
				match(T__8);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DatatypeContext extends ParserRuleContext {
		public DatatypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datatype; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterDatatype(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitDatatype(this);
		}
	}

	public final DatatypeContext datatype() throws RecognitionException {
		DatatypeContext _localctx = new DatatypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_datatype);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_block);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__14:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				match(T__14);
				setState(126);
				statement();
				setState(127);
				match(T__15);
				}
				break;
			case T__9:
			case T__10:
			case T__11:
			case T__12:
			case T__13:
			case T__16:
			case T__19:
			case T__20:
			case T__21:
			case T__29:
			case T__32:
			case T__33:
			case T__42:
			case T__43:
			case T__44:
			case T__45:
			case T__46:
			case ID:
			case Digit:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public List<DefexpressionContext> defexpression() {
			return getRuleContexts(DefexpressionContext.class);
		}
		public DefexpressionContext defexpression(int i) {
			return getRuleContext(DefexpressionContext.class,i);
		}
		public List<DefconditionContext> defcondition() {
			return getRuleContexts(DefconditionContext.class);
		}
		public DefconditionContext defcondition(int i) {
			return getRuleContext(DefconditionContext.class,i);
		}
		public List<DefloopContext> defloop() {
			return getRuleContexts(DefloopContext.class);
		}
		public DefloopContext defloop(int i) {
			return getRuleContext(DefloopContext.class,i);
		}
		public List<DefreturnContext> defreturn() {
			return getRuleContexts(DefreturnContext.class);
		}
		public DefreturnContext defreturn(int i) {
			return getRuleContext(DefreturnContext.class,i);
		}
		public List<DefoutputContext> defoutput() {
			return getRuleContexts(DefoutputContext.class);
		}
		public DefoutputContext defoutput(int i) {
			return getRuleContext(DefoutputContext.class,i);
		}
		public List<DefinputContext> definput() {
			return getRuleContexts(DefinputContext.class);
		}
		public DefinputContext definput(int i) {
			return getRuleContext(DefinputContext.class,i);
		}
		public List<DefbreakContext> defbreak() {
			return getRuleContexts(DefbreakContext.class);
		}
		public DefbreakContext defbreak(int i) {
			return getRuleContext(DefbreakContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(139); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(139);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__9:
					case T__10:
					case T__11:
					case T__12:
					case T__13:
					case T__29:
					case T__42:
					case T__45:
					case T__46:
					case ID:
					case Digit:
						{
						setState(132);
						defexpression();
						}
						break;
					case T__16:
						{
						setState(133);
						defcondition();
						}
						break;
					case T__19:
					case T__20:
					case T__21:
						{
						setState(134);
						defloop();
						}
						break;
					case T__32:
						{
						setState(135);
						defreturn();
						}
						break;
					case T__43:
						{
						setState(136);
						defoutput();
						}
						break;
					case T__44:
						{
						setState(137);
						definput();
						}
						break;
					case T__33:
						{
						setState(138);
						defbreak();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(141); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefexpressionContext extends ParserRuleContext {
		public DatatypeContext datatype() {
			return getRuleContext(DatatypeContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DefexpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defexpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterDefexpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitDefexpression(this);
		}
	}

	public final DefexpressionContext defexpression() throws RecognitionException {
		DefexpressionContext _localctx = new DefexpressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_defexpression);
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				datatype();
				setState(144);
				expression(0);
				setState(145);
				match(T__8);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(147);
				expression(0);
				setState(148);
				match(T__8);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(150);
				datatype();
				setState(151);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefconditionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public DefconditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defcondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterDefcondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitDefcondition(this);
		}
	}

	public final DefconditionContext defcondition() throws RecognitionException {
		DefconditionContext _localctx = new DefconditionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_defcondition);
		try {
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(155);
				match(T__16);
				setState(156);
				match(T__17);
				setState(157);
				expression(0);
				setState(158);
				match(T__8);
				setState(159);
				block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(161);
				match(T__16);
				setState(162);
				match(T__17);
				setState(163);
				expression(0);
				setState(164);
				match(T__8);
				setState(165);
				block();
				setState(166);
				match(T__18);
				setState(167);
				block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefloopContext extends ParserRuleContext {
		public DefwhileContext defwhile() {
			return getRuleContext(DefwhileContext.class,0);
		}
		public DefforContext deffor() {
			return getRuleContext(DefforContext.class,0);
		}
		public DefdowhileContext defdowhile() {
			return getRuleContext(DefdowhileContext.class,0);
		}
		public DefloopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defloop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterDefloop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitDefloop(this);
		}
	}

	public final DefloopContext defloop() throws RecognitionException {
		DefloopContext _localctx = new DefloopContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_defloop);
		try {
			setState(174);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__20:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				defwhile();
				}
				break;
			case T__21:
				enterOuterAlt(_localctx, 2);
				{
				setState(172);
				deffor();
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 3);
				{
				setState(173);
				defdowhile();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefdowhileContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileloopexprContext whileloopexpr() {
			return getRuleContext(WhileloopexprContext.class,0);
		}
		public DefdowhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defdowhile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterDefdowhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitDefdowhile(this);
		}
	}

	public final DefdowhileContext defdowhile() throws RecognitionException {
		DefdowhileContext _localctx = new DefdowhileContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_defdowhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(T__19);
			setState(177);
			block();
			setState(178);
			match(T__20);
			setState(179);
			match(T__6);
			setState(180);
			whileloopexpr();
			setState(181);
			match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefwhileContext extends ParserRuleContext {
		public WhileloopexprContext whileloopexpr() {
			return getRuleContext(WhileloopexprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public DefwhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defwhile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterDefwhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitDefwhile(this);
		}
	}

	public final DefwhileContext defwhile() throws RecognitionException {
		DefwhileContext _localctx = new DefwhileContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_defwhile);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(183);
			match(T__20);
			setState(184);
			match(T__6);
			setState(185);
			whileloopexpr();
			setState(186);
			match(T__7);
			setState(187);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileloopexprContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public RelationContext relation() {
			return getRuleContext(RelationContext.class,0);
		}
		public WhileloopexprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileloopexpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterWhileloopexpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitWhileloopexpr(this);
		}
	}

	public final WhileloopexprContext whileloopexpr() throws RecognitionException {
		WhileloopexprContext _localctx = new WhileloopexprContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_whileloopexpr);
		try {
			setState(194);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(189);
				term();
				setState(190);
				relation();
				setState(191);
				term();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(193);
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefforContext extends ParserRuleContext {
		public ForloopexprContext forloopexpr() {
			return getRuleContext(ForloopexprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public DefforContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deffor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).enterDeffor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof projectListener ) ((projectListener)listener).exitDeffor(this);
		}
	}

	public final DefforContext deffor() throws RecognitionException {
		DefforContext _localctx = new DefforContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_deffor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(196);
			match(T__21);
			setState(197);
			match(T__6);
			setState(198);
			forloopexpr();
			setState(199);
			match(T__7);
			setState(200);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
